--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>pixel-art</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1 id="title" >Paleta de Cores</h1>
+<section>
+    <h1 id="title" >Paleta de Cores</h1>
+</section>
+<div id="color-palette" >
+    <div id="cor1" class="color" ></div>
+    <div id="cor2" class="color" ></div>
+    <div id="cor3" class="color" ></div>
+    <div id="cor4" class="color" ></div>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
