--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="cor2" class="color" ></div>
     <div id="cor3" class="color" ></div>
     <div id="cor4" class="color" ></div>
+    <button id="button-random-color" >Cores aleatórias</button>
 </div>
 <script src="script.js"></script>
 </body>
