--- a/index.html
+++ b/index.html
@@ -18,6 +18,34 @@
     <div id="cor4" class="color" ></div>
     <button id="button-random-color" >Cores aleatórias</button>
 </div>
+<div id="pixel-board" >
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    <div class="pixel" ></div>
+    
+</div>
 <script src="script.js"></script>
 </body>
 </html>
