--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 id="title" >Paleta de Cores</h1>
 </section>
 <div id="color-palette" >
-    <div id="cor1" class="color" ></div>
+    <div id="cor1" class="color selected" ></div>
     <div id="cor2" class="color" ></div>
     <div id="cor3" class="color" ></div>
     <div id="cor4" class="color" ></div>
