--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
     <div id="cor4" class="color" ></div>
     <button id="button-random-color" >Cores aleatórias</button>
 </div>
+<div>
+    <button id="clear-board" >limpar</button>
+</div>
 <div id="pixel-board" >
     <div class="pixel" ></div>
     <div class="pixel" ></div>
-    <div class="pixel" ></div>
+    <div class="pixel" ></div> 
     <div class="pixel" ></div>
     <div class="pixel" ></div>
     <div class="pixel" ></div>
