--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
     <div id="cor2" class="color" ></div>
     <div id="cor3" class="color" ></div>
     <div id="cor4" class="color" ></div>
+    
+</div>
+<div>
     <button id="button-random-color" >Cores aleatórias</button>
 </div>
 <div>
-    <button id="clear-board" >limpar</button>
+    <button id="clear-board" class="button" >limpar</button>
 </div>
 
+<div>
+    <h2 id="sub" >vamos nessa </h2>
+</div>
 
 <div id="pixel-board" >
     <div class="pixel" ></div>
