--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button id="button-random-color" >Cores aleatórias</button>
 </div>
 <div>
-    <button id="clear-board" class="button" >limpar</button>
+    <button id="clear-board" class="button" >Limpar</button>
 </div>
 
 <div>
