--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 </div>
 <div>
-    <button id="button-random-color" >Cores aleatórias</button>
+    <button type="button"  id="button-random-color" >Cores aleatórias</button>
 </div>
 <div>
     <button id="clear-board" class="button" >Limpar</button>
