--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <section>
     <h1 id="title" >Paleta de Cores</h1>
 </section>
+<div id="main" class="main-class"  >
 <div id="color-palette" >
     <div id="cor1" class="color selected" ></div>
     <div id="cor2" class="color" ></div>
@@ -18,11 +19,13 @@
     <div id="cor4" class="color" ></div>
     
 </div>
+<div id="control" class="control" >
 <div>
     <button type="button"  id="button-random-color" >Cores aleatórias</button>
 </div>
 <div>
     <button id="clear-board" class="button" >Limpar</button>
+</div>
 </div>
 
 <div>
@@ -56,6 +59,7 @@
     <div class="pixel" ></div>
     <div class="pixel" ></div>
     
+</div>
 </div>
 <script src="script.js"></script>
 </body>
