--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <button type="button"  id="button-random-color" >Cores aleatórias</button>
 </div>
 <div>
-    <button id="clear-board" class="button" >Limpar</button>
+    <button id="clear-board" class="button" >Limpar todo o bord</button>
 </div>
 </div>
 
 <div>
-    <h2 id="sub" >vamos nessa </h2>
+    <h2 id="sub" >Art </h2>
 </div>
 
 <div id="pixel-board" >
